[package]
name = "QuantumRandom"
version = "0.2.0"
authors = ["Thomas Braun <tbraun96@gmail.com>"]
edition = "2018"
homepage = "https://github.com/tbraun96/quantumrandom"
description = "This is the rust implementation of the ANU Quantum Random Number System. You can easily generate an arbitrary number of u8's, u16's, u32's, u64's, and u128's"
readme = "README.md"
license = "AGPL-3.0-only"
license-file = "LICENSE"
# For deployment on crates.io
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
reqwest = "0.9.10"
rand = "0.6.5"
atoi = "0.3.1"
